--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="right-side">
         <div class="topic-text">Send me a message</div>
         <p>If you have any project to hire me, you can send me message from here. It's my pleasure to help you.</p>
-      <form action="#">
+      <form action="https://formspree.io/f/xeqndaap" method="POST">
         <div class="input-box">
           <input type="text" placeholder="Enter your name" required>
         </div>
