--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <p>If you have any project to hire me, you can send me message from here. It's my pleasure to help you.</p>
       <form action="https://formspree.io/f/xeqndaap" method="POST">
         <div class="input-box">
-          <input type="text" placeholder="Enter your name" required>
+          <input type="text" name="name" placeholder="Enter your name" required>
         </div>
         <div class="input-box">
-          <input type="email" placeholder="Enter your email" required>
+          <input type="email" name="email" placeholder="Enter your email" required>
         </div>
         <div class="input-box message-box">
-          <textarea placeholder="Enter your message" required></textarea>
+          <textarea name="message" placeholder="Enter your message" required></textarea>
         </div>
         <div class="button">
           <input type="submit" value="Send Now" >
