--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Hire Me - Abirett | Pro Front-End Developer & Designer">
     <meta name="description" content="Hi I'm Ashfaque Hossain Abir, a Web Developer, Graphic Designer and Content Writer based in Bangladesh. Hire me now!">
-    <meta property="og:image" content="images/preview3.png" />
+    <meta property="og:image" content="images/preview.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://abirett2.github.io/Hire-me/"/>
     <meta property="og:title" content="Hire Me - Abirett | Pro Front-End Developer & Designer" />
@@ -18,7 +18,7 @@
     <meta property="twitter:url" content="https://abirett2.github.io/Hire-me/">
     <meta property="twitter:title" content="Hire Me - Abirett | Pro Front-End Developer & Designer">
     <meta property="twitter:description" content="Hi, I'm Ashfaque Hossain Abir, a Web Developer, Graphic Designer and Content Writer based in Bangladesh. Hire me now!">
-    <meta property="twitter:image" content="images/preview3.png">
+    <meta property="twitter:image" content="images/preview.png">
     <link rel="icon" href="images/icon.png" type="image/x-icon">
    </head>
 <body>
