--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
         <p>If you have any project to hire me, you can send me message from here. It's my pleasure to help you.</p>
       <form action="https://formsubmit.co/ashfaquehossain900@gmail.com" method="POST">
         <div class="input-box" style="display: none;">
-          <input type="hidden" name="_subject" value="New submission from Abirett website">
+          <input type="hidden" name="_subject" value="New submission from Abirett website!">
+        </div>
+        <div class="input-box" style="display: none;">
+          <input type="hidden" name="_captcha" value="false">
+        </div>
+        <div class="input-box" style="display: none;">
+          <input type="hidden" name="_next" value="https://abirett2.github.io/thanks-for-submit/">
         </div>
         <div class="input-box">
           <input type="text" name="name" placeholder="Enter your name" required>
